--- a/about.html
+++ b/about.html
@@ -272,11 +272,11 @@
         <footer class="footer">
 			<div class="seoul-campus">
 				<div class="title">서울캠</div>
-				<p>회장: 박기태 (도공16)<br>부회장: 박예은 (미컴18)</p>
+				<p>회장: 조승현 (경영17)<br>부회장: 오수빈 (공간연출19)</p>
 			</div>
 			<div class="anseong-campus">
 				<div class="title">안성캠</div>
-				<p>회장: 김지인 (시디18)<br>부회장: 강수진 (패디18)</p>
+				<p>회장: 김주엘 (시생공17)<br>부회장: 최지원 (패션19)</p>
 			</div>
 			<div class="contact">
 				<div class="title">문의하기 </div>
