--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			</div>
 			<div class="copyright"> 
 				<p>ⓒ 2021 CUSCM 중앙대기독학생연합회</p>
-                <a href="https://github.com/sage-cau">개발: 장성현 (컴공18)</a>
+                <a href="https://github.com/cuscm">개발: 장성현 (컴공18)</a>
 			</div>
 		</footer>
 	</div>
