--- a/index.html
+++ b/index.html
@@ -213,22 +213,22 @@
 	<script type="module" src="js/popup.js"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-9TF4C7GC9C"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9TF4C7GC9C"></script>
 	<script>
 	window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
 	gtag('config', 'G-9TF4C7GC9C');
-	</script> -->
+	</script>
 
-	<!-- <script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
-    <script type="text/javascript">
-    if(!wcs_add) var wcs_add = {};
-    wcs_add["wa"] = "ba4626d6dc3788";
-    if(window.wcs) {
-    wcs_do();
-    }
-    </script> -->
+	<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+	<script type="text/javascript">
+	if(!wcs_add) var wcs_add = {};
+	wcs_add["wa"] = "ba4626d6dc3788";
+	if(window.wcs) {
+	wcs_do();
+	}
+	</script>
 </body>
 </html>
