Fix: 문구수정 (온라인 목요예배->목요예배)

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				<img class="chapel-img" src="images/thr_chapel_fullscreen.png" alt="thr_chapel">
 			</div>
 			<h3>전 중앙인이 드리는</h3>
-			<h1>온라인 목요예배</h1>
+			<h1>목요예배</h1>
 			<div class="desc-container">
 				<p class="description">
 					<strong>매주 목요일 6시</strong>
