Refact: nav 메뉴 클래스명 변경

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
 		</svg>
 	</div>
 
-	<nav class="global-nav">
-		<div class="global-nav-links">
-			<!-- 나중에는 global 메뉴로 활용 가능... -->
-			<a href="#" style="cursor:default" class="global-nav-item">자세한 내용을 보려면 위로 스크롤 하세요!</a>
+	<nav class="top-nav">
+		<div class="top-nav-items">
+			자세한 내용을 보려면 위로 스크롤 하세요!
+			<a class="chapel-link">예배안내 가기</a>
 		</div>
 	</nav>
-	<nav class="local-nav">
-		<div class="local-nav-links">
+	<nav class="global-nav">
+		<div class="global-nav-links">
 			<a href="index.html" class="home">CUSCM</a>
-			<a style="cursor:pointer" class="chapel-link">목요예배</a>
+			<!-- <a style="cursor:pointer" class="chapel-link">목요예배</a> -->
 			<a href="about.html">소개</a>
 			<a href="https://blog.naver.com/cuscmer">블로그</a>
 			<a href="https://www.instagram.com/cuscm_seoul/">인스타</a>
