--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
 
     <meta name="naver-site-verification" content="b255594c202400638d526085587aa0544c65157b" />
 </head>
-<body class="local-nav-sticky">
-    <nav class="local-nav">
-        <div class="local-nav-links">
+<body class="global-nav-sticky">
+    <nav class="global-nav">
+        <div class="global-nav-links">
             <a href="index.html" class="home">CUSCM</a>
             <a href="about.html">소개</a>
             <a href="https://blog.naver.com/cuscmer">블로그</a>
