회장단 명단 수정

--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
 		<footer class="footer">
 			<div class="seoul-campus">
 				<div class="title">서울캠</div>
-				<p>회장: 조승현 (경영17)<br>부회장: 오수빈 (공간연출19)</p>
+				<p>회장: 김지승 (경영18)<br>부회장: 김시연 (프문20)</p>
 			</div>
 			<div class="anseong-campus">
 				<div class="title">안성캠</div>
-				<p>회장: 김주엘 (시생공17)<br>부회장: 최지원 (패션19)</p>
+				<p>회장: 이현서 (문예창작20)<br>부회장: 김예실 (문예창작20)</p>
 			</div>
 			<div class="contact">
 				<div class="title">문의하기 </div>
